ajout de l'icon

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ div{
     background-color: black;
 }
 
-#timer{
+#chronomètre{
     text-align: center;
     margin: auto;
     align-items: center;
